@@ -12,7 +12,7 @@ export(compounds)
 export(createCompDb)
 export(createCompDbPackage)
 export(expandMzIntensity)
-export(hasSpectra)
+export(hasMsMsSpectra)
 export(make_metadata)
 export(msms_spectra_hmdb)
 export(src_compdb)
@@ -23,6 +23,7 @@ exportClasses(CompoundNameFilter)
 exportClasses(MsmsMzRangeMaxFilter)
 exportClasses(MsmsMzRangeMinFilter)
 exportMethods(dbconn)
+exportMethods(hasMz)
 exportMethods(show)
 exportMethods(spectra)
 exportMethods(supportedFilters)
