@@ -1,0 +1,1 @@
+setGeneric("hasMz", function(object, mz, ...) standardGeneric("hasMz"))
